--- a/requirements.txt
+++ b/requirements.txt
@@ -19,6 +19,7 @@ distro-info==1.0
 duplicity==0.8.20
 fasteners==0.14.1
 filelock==3.3.2
+flake8==3.8.4
 future==0.18.2
 httplib2==0.18.1
 idna==2.10
@@ -34,6 +35,7 @@ louis==3.18.0
 macaroonbakery==1.3.1
 Mako==1.1.3
 MarkupSafe==1.1.1
+mccabe==0.6.1
 monotonic==1.5
 more-itertools==4.2.0
 netifaces==0.10.9
@@ -45,7 +47,9 @@ Pillow==8.1.2
 platformdirs==2.4.0
 protobuf==3.12.4
 pycairo==1.16.2
+pycodestyle==2.6.0
 pycups==2.0.1
+pyflakes==2.2.0
 PyGObject==3.40.1
 PyJWT==1.7.1
 pymacaroons==0.13.0
